# TJC_Display

./: CHANGELOG.md  CHANGELOG.me  LICENSE  README.md  keywords.txt  library.properties
Tools/TJC_Studio/: CMakeLists.txt  README.md  build_vs2026_x64.bat
Tools/TJC_Studio_CMake_v1_10/: CMakeLists.txt  README.md
Tools/TJC_Studio_CMake_v1_11/: CMakeLists.txt  README.md
Tools/TJC_Studio_CMake_v1_6/: CMakeLists.txt  README.md
Tools/TJC_Studio_CMake_v1_6/include/generator/: CppGenerator.h  JsonGenerator.h
Tools/TJC_Studio_CMake_v1_6/include/model/: Component.h  Page.h  Project.h
Tools/TJC_Studio_CMake_v1_6/include/parser/: HMIParser.h
Tools/TJC_Studio_CMake_v1_6/src/cli/: main.cpp
Tools/TJC_Studio_CMake_v1_6/src/generator/: CppGenerator.cpp  JsonGenerator.cpp
Tools/TJC_Studio_CMake_v1_6/src/parser/: HMIParser.cpp
Tools/TJC_Studio_CMake_v1_7/: CMakeLists.txt
Tools/TJC_Studio_CMake_v1_8/: CMakeLists.txt
Tools/TJC_Studio_CMake_v1_9/: CMakeLists.txt  README.md
Usart HMI/: test exemples 1-5.tft
docs/: API.md  NAMING_CONVENTIONS.md  QUICK_START.md  VALIDATION.md
examples/: README.md
examples/01_HelloWorld/: 01_HelloWorld.ino
examples/02_OutputTest/: 02_OutputTest.ino
src/: TJC_Button.cpp  TJC_Button.h  TJC_Component.cpp  TJC_Component.h  TJC_Display.cpp  TJC_Display.h  TJC_DualButton.cpp  TJC_DualButton.h  TJC_Event.h  TJC_Number.cpp  TJC_Number.h  TJC_Parser.cpp  TJC_Parser.h  TJC_Picture.cpp  TJC_Picture.h  TJC_ProgressBar.cpp  TJC_ProgressBar.h  TJC_Protocol.cpp  TJC_Protocol.h  TJC_Slider.cpp  TJC_Slider.h  TJC_Text.cpp  TJC_Text.h  TJC_Types.h
(+28 files in other folders)
